# backend-libs-opentalk-client

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  README.md  REUSE.toml  deny.toml  renovate.json
crates/opentalk-cli/: Cargo.toml
crates/opentalk-cli/src/: config.rs  config_manager.rs  data.rs  data_manager.rs  main.rs  opentalk_account_id.rs  opentalk_instance_id.rs  opntalk_instance_account_id.rs
crates/opentalk-client/: Cargo.toml
crates/opentalk-client-data-persistence/: Cargo.toml
crates/opentalk-client-data-persistence-filesystem/: Cargo.toml
crates/opentalk-client-data-persistence-filesystem/src/: account_data_file.rs  filesystem_data_error.rs  filesystem_data_manager.rs  lib.rs
crates/opentalk-client-data-persistence/src/: account_data_file.rs  account_tokens.rs  config.rs  config_error.rs  config_manager.rs  data_error.rs  data_manager.rs  lib.rs  opentalk_account_config.rs  opentalk_account_id.rs  opentalk_instance_account_id.rs  opentalk_instance_config.rs  opentalk_instance_id.rs
crates/opentalk-client-requests-api-v1/: Cargo.toml
crates/opentalk-client-requests-api-v1/src/: lib.rs  test_client.rs
crates/opentalk-client-requests-api-v1/src/auth/: login_get_request.rs  login_post_request.rs  mod.rs
crates/opentalk-client-requests-api-v1/src/common/: empty_body.rs  mod.rs
crates/opentalk-client-requests-api-v1/src/events/: events_get_by_id_request.rs  events_get_request.rs  events_invites_post_request.rs  events_post_request.rs  mod.rs
crates/opentalk-client-requests-api-v1/src/response/: api_error.rs  api_response.rs  mod.rs
crates/opentalk-client-requests-api-v1/src/users/: mod.rs  users_get_find_query_request.rs  users_get_me_assets.rs  users_get_me_request.rs  users_patch_me_request.rs
crates/opentalk-client/src/: authenticated_client.rs  authorization.rs  client.rs  lib.rs  oidc.rs  oidc_authorization.rs
crates/opentalk-client/src/oidc_authorization/: mod.rs  oauth_reqwest_0_13_client.rs  oidc_device_authorization.rs  oidc_direct_access_grant.rs
