# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["OpenTalk Team <mail@opentalk.eu>"]
homepage = "https://opentalk.eu/"
repository = "https://gitlab.opencode.de/opentalk/libs/opentalk-client"

[workspace.dependencies]
opentalk-cli = { path = "crates/opentalk-client", version = "0.0.2" }
opentalk-client = { path = "crates/opentalk-client", version = "0.0.2" }
opentalk-client-data-persistence = { path = "crates/opentalk-client-data-persistence", version = "0.0.1" }
opentalk-client-data-persistence-filesystem = { path = "crates/opentalk-client-data-persistence-filesystem", version = "0.0.1" }
opentalk-client-requests-api-v1 = { path = "crates/opentalk-client-requests-api-v1", version = "0.0.2" }

anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"
chrono = "0.4.44"
clap = "4.6.1"
derive_more = "2"
dirs = "6.0.0"
env_logger = "0.11.10"
http = "1.4.0"
http-request-derive = "0.6.0"
http-request-derive-client = "0.3.0"
http-request-derive-client-reqwest = "0.5.0"
http-request-derive-logging = "0.1.0"
httpmock = "0.8.3"
itertools = "0.14.0"
log = "0.4.29"
oauth2 = { version = "5", default-features = false }
opentalk-types-api-common = "0.7.2"
opentalk-types-api-v1 = "0.59.0"
opentalk-types-common = "0.44.1"
pretty_assertions = "1.4.1"
reqwest = "0.13.2"
secrecy = "0.10.3"
serde = "1.0.228"
serde_json = "1.0.149"
serde_with = "3.18.0"
snafu = "0.9.0"
tempfile = "3.27.0"
tokio = "1.52.1"
toml = "1.1.2"
url = "2.5.8"
