# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
edition = "2021"
license = "EUPL-1.2"
name = "opentalk-cli"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
dirs.workspace = true
opentalk-client.workspace = true
opentalk-client-data-persistence.workspace = true
pretty_assertions = { workspace = true, features = ["unstable"] }
serde = { workspace = true, features = ["derive"] }
snafu.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true
url = { workspace = true, features = ["serde"] }
