# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "A command-line tool to interact with OpenTalk"
documentation = "https://docs.rs/opentalk-cli"
edition = "2024"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-cli"
publish = true
repository.workspace = true
version = "0.0.1-alpha.8"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
opentalk-client.workspace = true
opentalk-client-data-persistence.workspace = true
opentalk-client-requests-api-v1.workspace = true
opentalk-types-api-v1.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
url = { workspace = true, features = ["serde"] }
