# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
edition = "2021"
license = "EUPL-1.2"
name = "opentalk-client-data-persistence"
version = "0.1.0"

[dependencies]
chrono.workspace = true
derive_more = { workspace = true, features = [
  "as_ref",
  "deref",
  "from",
  "from_str",
] }
dirs.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
snafu.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
