# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Persistence functionality for use with the opentalk-client library"
documentation = "https://docs.rs/opentalk-client-data-persistence"
edition = "2024"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-client-data-persistence"
publish = true
repository.workspace = true
version = "0.0.1-alpha.2"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = [
  "as_ref",
  "deref",
  "from",
  "from_str",
  "into",
] }
dirs.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
snafu.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
