# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Datatypes that describe requests to the endpoints of the OpenTalk v1 API to be used by clients"
documentation = "https://docs.rs/opentalk-cli"
edition = "2024"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-client-requests-api-v1"
publish = true
repository.workspace = true
version = "0.0.1-alpha.13"

[dependencies]
bytes.workspace = true
http.workspace = true
http-request-derive.workspace = true
opentalk-types-api-v1 = { workspace = true, features = ["serde"] }
opentalk-types-common = { workspace = true, features = ["serde"] }
snafu.workspace = true

[dev-dependencies]
chrono.workspace = true
httpmock.workspace = true
pretty_assertions = { workspace = true, features = ["unstable"] }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["macros", "rt"] }
