# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "A client library to interact with OpenTalk"
documentation = "https://docs.rs/opentalk-client"
edition = "2024"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-client"
publish = true
repository.workspace = true
version = "0.0.1-alpha.10"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
http.workspace = true
http-request-derive.workspace = true
http-request-derive-client.workspace = true
http-request-derive-client-reqwest.workspace = true
http-request-derive-logging.workspace = true
itertools.workspace = true
oauth2.workspace = true
opentalk-client-data-persistence.workspace = true
opentalk-client-requests-api-v1.workspace = true
opentalk-types-api-v1.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }
url = { workspace = true, features = ["serde"] }
